# drawtice

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  README.md  browserconfig.xml  elm.json  index.html  manifest.json
backend/: .gitignore  Cargo.toml
backend/src/: game.rs  main.rs  names.rs  protocol.rs
backend/src/game/: latin_matrix.rs
lib/: BrushSizeSimple.js  ClearTool.js  LoadTool.js  PortFunnel.js  lodash.throttle.js
lib/PortFunnel/: LocalStorage.js  WebSocket.js
src/: Main.elm  Names.elm  PortFunnels.elm  Protocol.elm
styles/: main.css
