[package]
name = "drawtice-backend"
version = "0.1.0"
authors = ["kongr45gpen <electrovesta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
log = "0.4"
futures = "0.3"
pretty_env_logger = "0.4"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
